fix supervisor goals scrollbar card

--- a/src/css/supervisor_goals.css
+++ b/src/css/supervisor_goals.css
@@ -65,15 +65,15 @@
 }
 
 .card {
-    width: 95%;
-    min-width: 450px;
+    width: 100%;
+    /* min-width: 450px; */
     background-color: var(--color-card);
     padding: 0.8em;
     overflow-wrap: break-word;
 }
 
 .card_detail {
-    width: 95%;
+    width: 100%;
     font-size: 0.9rem;
     /* position: relative;
     left: 33px; */
@@ -111,6 +111,7 @@
 
 .container__card--goals::-webkit-scrollbar {
     width: 0.3rem;
+    height: 0.3rem;
 }
  
 .container__card--goals::-webkit-scrollbar-track {
